# alertgest

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.docs/: alertgest-design.md
alert-stack/: docker-compose.yml  readme.md
alert-stack/alert-generator/: generator.py
alert-stack/alertmanager/: alertmanager.yml
alert-stack/landing-page/: index.html  nginx.conf
alert-stack/prometheus/: alerts.yml  prometheus.yml
alert-stack/webhook-receiver/: Dockerfile  receiver.py
src/: config.py  main.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 001_initial_schema.py
tests/: conftest.py  test_config.py
tests/test_db/: test_models.py
